[gd_scene load_steps=13 format=2]

[ext_resource path="res://resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://resources/sprites/buttons/usecharacterpressed.png" type="Texture" id=2]
[ext_resource path="res://resources/sprites/buttons/Charactercreator1.png" type="Texture" id=3]
[ext_resource path="res://resources/sprites/buttons/Charactercreatorpressed1.png" type="Texture" id=4]
[ext_resource path="res://resources/sprites/buttons/Mastermode.png" type="Texture" id=5]
[ext_resource path="res://scenes/screens/MainMenu.gd" type="Script" id=6]
[ext_resource path="res://resources/sprites/buttons/usecharacter.png" type="Texture" id=7]
[ext_resource path="res://resources/sprites/backgrounds/9patch_scroll3.png" type="Texture" id=8]
[ext_resource path="res://resources/EscapeKeyShortcut.tres" type="ShortCut" id=9]
[ext_resource path="res://resources/sprites/buttons/Mastermodepressed.png" type="Texture" id=10]
[ext_resource path="res://scenes/panels/Logo.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/decorations/BG.tscn" type="PackedScene" id=12]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" parent="." instance=ExtResource( 12 )]

[node name="Logo" parent="." instance=ExtResource( 11 )]
margin_bottom = 250.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="CenterContainer"]
margin_left = 735.0
margin_top = 265.0
margin_right = 1185.0
margin_bottom = 815.0
rect_min_size = Vector2( 450, 550 )
texture = ExtResource( 8 )
patch_margin_left = 62
patch_margin_top = 80
patch_margin_right = 71
patch_margin_bottom = 67

[node name="Buttons" type="VBoxContainer" parent="CenterContainer"]
margin_left = 860.0
margin_top = 293.0
margin_right = 1060.0
margin_bottom = 787.0
custom_constants/separation = 10

[node name="CreateCharL" type="Label" parent="CenterContainer/Buttons"]
margin_right = 200.0
margin_bottom = 22.0
rect_min_size = Vector2( 200, 0 )
text = "Crear personaje"
align = 1

[node name="CreateChar" type="TextureButton" parent="CenterContainer/Buttons"]
margin_left = 50.0
margin_top = 32.0
margin_right = 150.0
margin_bottom = 132.0
rect_min_size = Vector2( 100, 100 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="GetCharSheetL" type="Label" parent="CenterContainer/Buttons"]
margin_top = 142.0
margin_right = 200.0
margin_bottom = 164.0
rect_min_size = Vector2( 200, 0 )
text = "Usar personaje"
align = 1

[node name="GetCharSheet" type="TextureButton" parent="CenterContainer/Buttons"]
margin_left = 50.0
margin_top = 174.0
margin_right = 150.0
margin_bottom = 274.0
rect_min_size = Vector2( 100, 100 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="MasterModeL" type="Label" parent="CenterContainer/Buttons"]
margin_top = 284.0
margin_right = 200.0
margin_bottom = 306.0
rect_min_size = Vector2( 200, 0 )
text = "Master mode"
align = 1

[node name="MasterMode" type="TextureButton" parent="CenterContainer/Buttons"]
margin_left = 50.0
margin_top = 316.0
margin_right = 150.0
margin_bottom = 416.0
rect_min_size = Vector2( 100, 100 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Buttons"]
margin_top = 426.0
margin_right = 200.0
margin_bottom = 456.0
custom_constants/separation = 30

[node name="Quit" type="Button" parent="CenterContainer/Buttons"]
margin_top = 466.0
margin_right = 200.0
margin_bottom = 494.0
rect_min_size = Vector2( 150, 0 )
shortcut = ExtResource( 9 )
text = "Salir"
flat = true
[connection signal="pressed" from="CenterContainer/Buttons/CreateChar" to="." method="_on_CreateChar_pressed"]
[connection signal="pressed" from="CenterContainer/Buttons/GetCharSheet" to="." method="_on_GetCharSheet_pressed"]
[connection signal="pressed" from="CenterContainer/Buttons/MasterMode" to="." method="_on_MasterMode_pressed"]
[connection signal="pressed" from="CenterContainer/Buttons/Quit" to="." method="_on_Quit_pressed"]
